[package]
name = "MView6"
version = "6.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
human_bytes = { version = "0.4.3", features = ["fast"], default-features = false }
image = "0.25.1"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = { version = "0.10.8", features = ["asm"] }
unrar = "0.5.3"
zip = "2.1.3"

[dependencies.eog]
# path="../eog/eog"
path="../libeog/rust/eog"

[dependencies.gtk]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gio]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.cairo-rs]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core"
features = ["png"]

[profile.dev.package.image]
opt-level = 3

[build-dependencies.glib-build-tools]
version = "0.18"
branch = "0.18"
git = "https://github.com/gtk-rs/gtk-rs-core"
