[package]
name = "MView6"
version = "6.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
cairo-rs = { version = "0.20", features = ["v1_16"] }
chrono = "0.4.38"
convert_case = "0.6.0"
gdk-pixbuf = { version = "0.20.0", features = ["v2_42"] }
gio = { version = "0.20.0", features = ["v2_72"] }
glib = { version = "0.20.0", features = ["v2_72"] }
gtk4 = { version = "0.9", features = ["v4_6"] }
human_bytes = { version = "0.4.3", features = ["fast"], default-features = false }
image = "0.25.1"
image-webp = "0.1.3"
kamadak-exif = "0.5.5"
rsvg = { package = "librsvg-rebind", version = "0.1.0" }
regex = "1.10.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = { version = "0.10.8", features = ["asm"] }
unrar = "0.5.3"
zip = "= 2.1.3"

[build-dependencies]
glib-build-tools = "0.20.0"
